--- a/web/package.json
+++ b/web/package.json
@@ -15,8 +15,8 @@
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
     "isbot": "^4.1.0",
-    "react": "18.3.0-canary-01ab35a9a-20240228",
-    "react-dom": "18.3.0-canary-01ab35a9a-20240228"
+    "react": "^18.2.20",
+    "react-dom": "^18.2.20"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
